--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: fractal
 Type: Package
-Title: Insightful Fractal Time Series Modeling and Analysis
-Version: 1.0-3
+Title: Fractal Time Series Modeling and Analysis
+Version: 1.1-0
 Date: 2007-1-01
-Author: William Constantine (REvolution Computing) and Donald Percival (Applied Physics Laboratory, University of Washington)
-Maintainer: William Constantine <bill@revolution-computing.com>
-Depends: R (>= 2.5.1), splus2R (>= 1.0-2), ifultools (>= 1.0-3), sapa (>= 1.0-2), wmtsa (>= 1.0-3), akima, MASS, scatterplot3d
+Author: William Constantine and Donald Percival (Applied Physics Laboratory, University of Washington)
+Maintainer: William Constantine <wlbconstan@gmail.com>
+Depends: R (>= 2.5.1), splus2R (>= 1.1-0), ifultools (>= 1.1-0), sapa (>= 1.1-0), wmtsa (>= 1.1-0), akima, MASS, scatterplot3d
 DependsSplus: ifultools (>= 1.0-2), sapa, wmtsa
 Description: Software to book in development entitled Fractal Time Series Analysis in S-PLUS and R, William Constantine and Donald B. Percival, Springer.
 License: GPL-2
